<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataBetweenActivities_ISAR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tela2">Tela2</string>
    <string name="bt_text">Ir para Tela 2 (Intent.putExtra)</string>
    <string name="bt_text2">Ir para Tela 1</string>
    <string name="tv_init">---------------</string>
    <string name="tv_sing">Singleton</string>
    <string name="tv_classApp">Classe Application</string>
    <string name="tv_intent">Intent</string>
    <string name="title_activity_tela3">Tela3</string>
    <string name="bt_tela3">Ir para Tela 3 (onActivityResult)</string>
    <string name="tv_saResult">onActivityResult</string>
    <string name="tv_tela3">Acitivity - Tela 3 -
        setResult(RESULT_OK, resultIntent);finish();</string>

</resources>
