<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.filipe1309.databetweenactivities_isar.Tela2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5a7cf1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tela2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/tv_intent" />

        <TextView
            android:id="@+id/tv_data_with_intent_tela2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_init" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_tela1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/bt_text2" />

</LinearLayout>
